# Rootless_V2CI

./: CMakeLists.txt  README.md  config.yml
script/: binaries_rotation_cronjob.sh  check_updates.sh  chroot_setup.sh  clone_or_pull_for_project.sh  cross_compiler.sh  install_packages_in_chroot.sh  logging.sh  rootless-debootstrap-wrapper.sh
src/: build_thread.c  main.c  project_worker.c  stop.c
src/include/: build_thread.h  project_worker.h
src/include/init/: load_config.h
src/include/types/: types.h
src/include/utils/: project_worker_utils.h  scripts_runner.h  utils.h
src/lib/init/: load_config.c
src/lib/utils/: scripts_runner.c  utils.c
